fixed footer gaps

--- a/src/App.css
+++ b/src/App.css
@@ -479,12 +479,12 @@ iframe {
     }
 
     .gridMap {
-      width: 100%;
+      min-width: 100%;
       height: 250px;
     }
 
     .gridMapVideo {
-      width: 100%;
+      min-width: 100%;
       height: 250px;
     }
 
